--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Search</title>
+    <title>Snake Game</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
       rel="stylesheet"
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <h1>Snake Game</h1>
+
+    <button id="start">Start/Restart</button>
+    <h2>Score : <span id="score"></span></h2>
+    <div class="grid"></div>
+
     <script src="index.js"></script>
   </body>
 </html>
